meson: disable_test -> enable_test
Prevents some double negation.

--- a/appl/FreeRTOS/GPSLogger/meson.build
+++ b/appl/FreeRTOS/GPSLogger/meson.build
@@ -217,7 +217,7 @@ foreach t : ara_gen_freertos_targets
   named_elf_targets += [t, elf_target]
   named_elf_targets += [t+'.lto', lto_elf]
 
-  if get_option('disable_gpslogger_tests') == false
+  if get_option('enable_gpslogger_tests')
     if t in ['instances_full_static', 'instances_full_initialized']
       test_elf = 'nop'
     else
