--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,10 +1,12 @@
 option('arch', type: 'combo', choices: ['arm', 'i386'], value: 'arm',
     description: 'Set the architecture for which the test applications are built.')
 
-option('disable_qemu_tests', type: 'boolean', value: false)
-option('disable_step_tests', type: 'boolean', value: false)
-option('disable_toplevel_tests', type: 'boolean', value: false)
-option('disable_gpslogger_tests', type: 'boolean', value: false)
+option('enable_qemu_tests', type: 'boolean', value: true)
+option('enable_step_tests', type: 'boolean', value: true,
+    description: 'Unit tests for ARA itself.')
+option('enable_toplevel_tests', type: 'boolean', value: true,
+    description: 'Not actual tests, but stored common commandlines and examples for calling ARA.')
+option('enable_gpslogger_tests', type: 'boolean', value: true)
 
 option('arm_include_dirs', type: 'array', value: ['/usr/lib/arm-none-eabi/include'],
     description: 'A list of include dirs for compiling for ARM. Only relevant, if arch==arm.')
