--- a/ara/steps/native/meson.build
+++ b/ara/steps/native/meson.build
@@ -48,7 +48,7 @@ step_pyx_gen = custom_target('step_pyx',
                  'ir_writer.pxd',
                  'llvm_map.pxd',
                  'llvm_optimization.pxd',
-                 'load_os_config.pxd',
+                 'load_freertos_config.pxd',
                  'replace_syscalls_create.pxd',
                  'replace_syscalls_create.pxi',
                  'value_analysis_core.pxd') + test_pxd + common_cython_files],
@@ -82,7 +82,7 @@ step_mod = py3_inst.extension_module('step',
         'ir_writer.cpp',
         'llvm_map.cpp',
         'llvm_optimization.cpp',
-        'load_os_config.cpp',
+        'load_freertos_config.cpp',
         'replace_syscalls_create.cpp',
         'step_manager.cpp',
         'value_analysis_core.cpp',
