meson toplevel tests: add an multisse test case

--- a/meson.build
+++ b/meson.build
@@ -122,7 +122,7 @@ subdir('test')
 # application tests
 # tests that aren't actually tests, but a way to store ara invocations with a given set of arguments
 if get_option('enable_toplevel_tests')
-    extra_settings = files('test/extra_settings.json')
+    extra_settings = files('test' / 'extra_settings.json')
     test('ara_tester',
        py3_inst,
        args: [ara_py, gpslogger_application,
@@ -169,6 +169,16 @@ if get_option('enable_toplevel_tests')
     test('ospert',
        py3_inst,
        args: [ara_py, freertos_ospert, '--log-level', 'debug', '--step', 'InstanceGraph'],
+       suite: 'toplevel'
+    )
+
+    autosar_minexample_settings = files('test' / 'autosar_minexample_settings.json')
+    test('multisse',
+       py3_inst,
+       args: [ara_py, autosar_minexample[0],
+              '--oilfile', autosar_minexample[1],
+              '--log-level', 'info',
+              '--step-settings', autosar_minexample_settings],
        suite: 'toplevel'
     )
 endif
