tools/compare_nm: size-diff, printing, .part.x-merge

--- a/appl/FreeRTOS/GPSLogger/meson.build
+++ b/appl/FreeRTOS/GPSLogger/meson.build
@@ -121,6 +121,8 @@ gpslogger_runtarget = run_target('gpslogger-full',
 
 named_elf_targets = []
 elf_targets = []
+named_plain_elf_targets = []
+named_lto_elf_targets = []
 foreach t : ara_gen_freertos_targets
   name_prefix = 'gpslogger-' + t
   ara_target = custom_target(name_prefix + '-os',
@@ -219,6 +221,8 @@ foreach t : ara_gen_freertos_targets
   elf_targets += lto_elf
   named_elf_targets += [t, elf_target]
   named_elf_targets += [t+'.lto', lto_elf]
+  named_plain_elf_targets += [t, elf_target]
+  named_lto_elf_targets += [t+'.lto', lto_elf]
 
   if get_option('enable_gpslogger_tests')
     if t in ['instances_full_static', 'instances_full_initialized']
@@ -244,6 +248,8 @@ foreach t : ara_gen_freertos_targets
 endforeach
 
 run_target('compare_nm-gpslogger', command: [compare_nm, nm.path(), named_elf_targets])
+run_target('compare_nm-gpslogger-plain', command: [compare_nm, nm.path(), named_plain_elf_targets])
+run_target('compare_nm-gpslogger-lto', command: [compare_nm, nm.path(), named_lto_elf_targets])
 run_target('compare_size-gpslogger', command: [size, elf_targets])
 run_target('compare_time-gpslogger', command: [compare_time, meson.build_root(), 'gpslogger'], depends: elf_targets)
 custom_target('analyze-gpslogger',
