LoadOIL: detect tasks
very minimal implementation but should be enough for the minexample

--- a/meson.build
+++ b/meson.build
@@ -178,6 +178,7 @@ if get_option('enable_toplevel_tests')
        args: [ara_py, autosar_minexample[0],
               '--oilfile', autosar_minexample[1],
               '--log-level', 'info',
+              '--dump',
               '--step-settings', autosar_minexample_settings],
        suite: 'toplevel'
     )
