appl: testcase for xTaskCreate after vTaskStartScheduler

--- a/appl/meson.build
+++ b/appl/meson.build
@@ -45,6 +45,7 @@ hw_apps = [
   'simple_mutex',
   'simple_mutex_constructor',
   # 'simple_pios_modules', # mini version of the librepilot/pios module system for task creation
+  'simple_lazy_create',
 ]
 
 
