deactivate steps temporarily

--- a/ara/steps/native/meson.build
+++ b/ara/steps/native/meson.build
@@ -73,21 +73,21 @@ endif
 step_mod = py3_inst.extension_module('step',
   step_pyx_cpp,
   files('option.cpp',
-        'bb_split.cpp',
-        'cdummy.cpp',
-        'comp_insert.cpp',
-        'fake_entry_point.cpp',
-        'fn_single_exit.cpp',
-        'icfg.cpp',
-        'ir_reader.cpp',
-        'ir_writer.cpp',
-        'llvm_map.cpp',
-        'llvm_optimization.cpp',
-        'load_freertos_config.cpp',
-        'replace_syscalls_create.cpp',
-        'step_manager.cpp',
-        'value_analysis_core.cpp',
-        'value_analyzer.cpp') + test_sources,
+      # 'bb_split.cpp',
+        'cdummy.cpp'),
+      # 'comp_insert.cpp',
+      # 'fake_entry_point.cpp',
+      # 'fn_single_exit.cpp',
+      # 'icfg.cpp',
+      # 'ir_reader.cpp',
+      # 'ir_writer.cpp',
+      # 'llvm_map.cpp',
+      # 'llvm_optimization.cpp',
+      # 'load_freertos_config.cpp',
+      # 'replace_syscalls_create.cpp',
+      # 'step_manager.cpp',
+      # 'value_analysis_core.cpp',
+      #  'value_analyzer.cpp') + test_sources,
 
   cpp_pch: 'pch/steps_pch.h',
   depend_files: step_pyx_h,
