meson: cy_helper.pxd is also a dependend file

--- a/ara/steps/native/meson.build
+++ b/ara/steps/native/meson.build
@@ -37,6 +37,7 @@ step_pyx_gen = custom_target('step_pyx',
   output : ['step_pyx.cpp', 'step_pyx.h'],
   input : [files('step.pyx',
                  'option.pxd',
+                 'cy_helper.pxd',
                  'bb_split.pxd',
                  'cdummy.pxd',
                  'comp_insert.pxd',
