--- a/ara/steps/native/meson.build
+++ b/ara/steps/native/meson.build
@@ -39,6 +39,7 @@ step_pyx_gen = custom_target('step_pyx',
                  'option.pxd',
                  'cy_helper.pxd',
                  'cstep.pxd',
+                 'backported_utility.pxd',
                  'replace_syscalls_create.pxd',
                  'replace_syscalls_create.pxi') + test_pxd + common_cython_files],
   command : [cython, '-I', graph_cython_inc, '-I', common_cython_inc, '-I', pyllco_cython_inc, '-I', step_dir, '@INPUT0@', '-o', '@OUTPUT0@'] + cython_flags,
