--- a/libs/sra/arm/platforms/stm32f103rb/meson.build
+++ b/libs/sra/arm/platforms/stm32f103rb/meson.build
@@ -7,3 +7,12 @@ libsra_objs += custom_target('libsra-serial.o',
                                       obj_flags +
                                       ['-O0'] +
                                       clang_flags)
+libsra_objs += custom_target('libsra-debug.o',
+                             input: 'debug.cc',
+                             output: 'debuf.cc.o',
+                             depfile: 'debug.cc.dep',
+                             command: clang_cpp +
+                                      libs_includes +
+                                      obj_flags +
+                                      ['-O0'] +
+                                      clang_flags)
