timing: xTaskCreate pre/post scheduler start apps

--- a/appl/meson.build
+++ b/appl/meson.build
@@ -46,6 +46,8 @@ hw_apps = [
   'simple_mutex_constructor',
   # 'simple_pios_modules', # mini version of the librepilot/pios module system for task creation
   'simple_lazy_create',
+  'timing_xTaskCreate-preScheduler',
+  'timing_xTaskCreate-postScheduler',
 ]
 
 
