--- a/ara/steps/native/meson.build
+++ b/ara/steps/native/meson.build
@@ -70,6 +70,7 @@ step_mod = py3_inst.extension_module('step',
         'fake_entry_point.cpp',
         'fn_single_exit.cpp',
         'icfg.cpp',
+        'callgraph.cpp',
         'ir_reader.cpp',
         'ir_writer.cpp',
         'llvm_map.cpp',
