--- a/ara/graph/cgraph/meson.build
+++ b/ara/graph/cgraph/meson.build
@@ -1,18 +1,18 @@
 graph_cython_inc = meson.current_source_dir()
 
-# llvmdata submodule
-llvm_data_pyx_cpp = custom_target('llvm_data_pyx',
-  output: ['llvm_data_pyx.cpp'],
-  input: files('llvm_data.pyx'),
-  depend_files: files('llvm_data.pxd'),
+# graphdata submodule
+graph_data_pyx_cpp = custom_target('graph_data_pyx',
+  output: ['graph_data_pyx.cpp'],
+  input: files('graph_data.pyx'),
+  depend_files: files('graph_data.pxd'),
   command: [cython, '--capi-reexport-cincludes', '@INPUT@', '-o', '@OUTPUT0@'] + cython_flags,
 )
 
-llvm_data_mod = py3_inst.extension_module('llvm_data',
-  llvm_data_pyx_cpp,
+graph_data_mod = py3_inst.extension_module('graph_data',
+  graph_data_pyx_cpp,
   dependencies: [py3_inst.dependency(), llvm_dep, common_dep, svf_dep]
 )
-llvm_data_dir = meson.current_build_dir()
+graph_data_dir = meson.current_build_dir()
 
 
 # libgraph
