--- a/ara/steps/native/meson.build
+++ b/ara/steps/native/meson.build
@@ -82,6 +82,6 @@ step_mod = py3_inst.extension_module('step',
         'value_analysis_core.cpp') + test_sources,
   cpp_pch: 'pch/steps_pch.h',
   depend_files: step_pyx_h,
-  dependencies: [log_dep, py3_inst.dependency(), llvm_dep, graph_dep, common_dep, pyllco_dep, svf_dep, cudd_dep]
+  dependencies: [log_dep, py3_inst.dependency(), llvm_dep, graph_tool_dep, graph_dep, common_dep, pyllco_dep, svf_dep, cudd_dep]
 )
 
