--- a/ara/steps/native/meson.build
+++ b/ara/steps/native/meson.build
@@ -79,7 +79,7 @@ step_mod = py3_inst.extension_module('step',
         'replace_syscalls_create.cpp',
         'svf_analyses.cpp',
         'svf_transformation.cpp',
-        'value_analysis_core.cpp') + test_sources,
+        'value_analysis.cpp') + test_sources,
   cpp_pch: 'pch/steps_pch.h',
   depend_files: step_pyx_h,
   dependencies: [log_dep, py3_inst.dependency(), llvm_dep, graph_tool_dep, graph_dep, common_dep, pyllco_dep, svf_dep, cudd_dep]
