--- a/ara/graph/cgraph/meson.build
+++ b/ara/graph/cgraph/meson.build
@@ -10,13 +10,13 @@ llvm_data_pyx_cpp = custom_target('llvm_data_pyx',
 
 llvm_data_mod = py3_inst.extension_module('llvm_data',
   llvm_data_pyx_cpp,
-  dependencies: [py3_inst.dependency(), llvm_dep]
+  dependencies: [py3_inst.dependency(), llvm_dep, common_dep, svf_dep]
 )
 llvm_data_dir = meson.current_build_dir()
 
 
 # libgraph
-libgraph_dependencies = [py3_inst.dependency(), llvm_dep, boost_dep, graph_tool_dep, common_dep, pyllco_dep]
+libgraph_dependencies = [py3_inst.dependency(), llvm_dep, boost_dep, graph_tool_dep, common_dep, pyllco_dep, svf_dep]
 
 
 libgraph = static_library('graph',
