--- a/ara/graph/cgraph/meson.build
+++ b/ara/graph/cgraph/meson.build
@@ -6,7 +6,7 @@ graph_inc = include_directories('.')
 graph_data_pyx = custom_target('graph_data_pyx',
   output: ['graph_data_pyx.cpp', 'graph_data_pyx.h'],
   input: files('graph_data.pyx'),
-  depend_files: files('graph_data.pxd'),
+  depend_files: files('graph_data.pxd', 'arguments.pxd'),
   command: [cython, '-I', common_cython_inc, '@INPUT@', '-o', '@OUTPUT0@'] + cython_flags,
 )
 graph_data_pyx_header = graph_data_pyx[1]
