--- a/libs/sra/arm/platforms/stm32f103rb/meson.build
+++ b/libs/sra/arm/platforms/stm32f103rb/meson.build
@@ -1,18 +1,17 @@
-libsra_objs += custom_target('libsra-serial.o',
-                             input: 'serial.cc',
-                             output: 'serial.cc.o',
-                             depfile: 'serial.cc.dep',
-                             command: clang_cpp +
-                                      libs_includes +
-                                      obj_flags +
-                                      ['-O0'] +
-                                      clang_flags)
-libsra_objs += custom_target('libsra-debug.o',
-                             input: 'debug.cc',
-                             output: 'debuf.cc.o',
-                             depfile: 'debug.cc.dep',
-                             command: clang_cpp +
-                                      libs_includes +
-                                      obj_flags +
-                                      ['-O0'] +
-                                      clang_flags)
+src_files = [
+  'serial',
+  'debug',
+  'sparse',
+]
+
+foreach src: src_files
+  libsra_objs += custom_target(src,
+                               input: src+'.cc',
+                               output: src+'.cc.o',
+                               depfile: src+'.cc.dep',
+                               command: clang_cpp+
+                                        libs_includes +
+                                        obj_flags +
+                                        ['-O2'] +
+                                        clang_flags)
+endforeach
