--- a/settings/meson.build
+++ b/settings/meson.build
@@ -137,3 +137,7 @@ foreach target : ara_gen_freertos_targets
                              ]
               )
 endforeach
+llvm_lto_cmd_none = ['cp', '@INPUT@', '@OUTPUT@']
+llvm_lto_cmd_standard = llvm_opt_cmd
+llvm_lto_cmd_rle = llvm_opt_cmd + ['-load', sparse_rle.full_path(), '-SparseRLE']
+llvm_lto_cmd_rle2 = llvm_opt_cmd + ['-load', sparse_rle2.full_path(), '-SparseRLE2']
