ResolveIndirectPointer: add step (split from SVFAnalyses)

--- a/ara/steps/native/meson.build
+++ b/ara/steps/native/meson.build
@@ -77,6 +77,7 @@ step_mod = py3_inst.extension_module('step',
         'llvm_optimization.cpp',
         'load_freertos_config.cpp',
         'replace_syscalls_create.cpp',
+        'resolve_function_pointer.cpp',
         'svf_analyses.cpp',
         'svf_transformation.cpp',
         'value_analysis.cpp') + test_sources,
